<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MakerDroid</string>
    <string name="menu_preview">Preview</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_load">Load</string>
    <string name="menu_background">Background</string>
    <string name="menu_print">3D Print</string>
    <string name="menu_done">Done</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_save">Save</string>
    <string name="btn_undo">Undo</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_etch">Etch</string>
    <string name="btn_background">Background</string>
    
   <string name="welcome_text">
      Welcome to MakerDroid!\n\n
      You can use MarkerDroid to draw out objects to be fabricated on a 3D printer
      or CNC router. You will draw a 2D drawing made out of polygons that MakerDroid 
      will then convert into a 3D object for fabrication. Please read the help text 
      in the menu to get started.\n\n
      Supported 3D printer: BFB RapMan v3.1 dual-head
   </string>
   <string name="help_text">First tap out the outer shape of the object you wish to fabricate.\n\n
Tap the pen icon above to draw holes inside the shape. Lines must not cross each other! Keep tapping 
the button to switch between polygons in the current layer. To place dots close together, tap out 
a long line, then break the line and move the dot into position and repeat as necessary.\n\n
Tap layer icon above to switch between the 2 layers. The orange layer will be printed higher than the 
green layer.\n\n
Load a background image to trace out a shape from a photo, image, or freehand drawing. The picture 
toolbar button allows you to toggle the background on and off to check your drawing.\n\n
Preview the object using the preview menu item to see what the fabricated object will look like when 
3D printed. You can select your fabrication device and tweak the drawing settings in the settings menu.</string>
   <string name="print_text">
      Your 3D model has been rendered to GCode that can be fabricated. Please transfer 
      the SD card to your printer/router to begin fabrication. You can use a GCode viewer 
      to preview the output and scale it if necessary. Saved file: 
   </string>
   
    <string name="vp_help_spen">For tips, press Menu > More > Help</string>
    <string name="vp_help_touch">For tips, Press Menu > More > Help</string>
    <string name="progress_preview">Generating 3D preview...</string>
    <string name="progress_print">Generating files for printer...</string>
    <string name="title_background_image">Background Image</string>
    <string name="err_no_spen">Device does not have SPen</string>
    <string name="err_invalid_filename">Invalid filename</string>
    <string name="err_save_first">Please save your drawing first</string>
    <string name="msg_saved">Saved!</string>
    <string name="title_stl_viewer">STL Viewer</string>
    <string name="msg_stl_viewer">An STL viewer app is needed to display the 
generated 3D model, and there are no such apps installed. Please install an STL viewer 
app. The free "STLView" app is recommended and known to work. Click Ok to view the website for this app, 
and once installed, you can preview your design.</string>
    <string name="err_drawing_empty">Please draw something first</string>
    <string name="title_print">Warning</string>
    <string name="msg_print">Generating a print (GCode) file will take
several minutes or more (depending on your model complexity and device speed). Make sure you 
have selected the right model of printer in the Settings menu. You can use the USB connector kit now 
to plug an external SD card into your device, and the generated file will be saved into the root 
of the SD card. It is advisable to preview the GCode file (saved as filename_export.bfb) on a PC first to be 
sure that the print is fine. The app developers are not responsible for any damage that may occur to 
your printer (or other device) as a result of using this app.</string>

</resources>