<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_load"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_load"/>
    <item
        android:id="@+id/menu_preview"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/menu_preview"/>
    <item
        android:id="@+id/menu_background"
        android:icon="@android:drawable/ic_menu_crop"
        android:title="@string/menu_background"/>
    <item
        android:id="@+id/menu_discard"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_discard"/>
    <item
        android:id="@+id/menu_print"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_print"/>

    <item
        android:id="@+id/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_help"/>    
    
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"/>    
    
</menu>